<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GameBuzzer</string>
    <string name="hello_world">Hello world!</string>

    <!-- Main Fragment Strings -->
    <string name="main_heading">Choose Role</string>
    <string name="role_host">Host</string>
    <string name="role_contestant">Contestant</string>

    <!-- Host Fragment Strings -->
    <string name="host_heading">Host</string>
    <string name="host_enable_buzzers">Enable Buzzers</string>
    <string name="discovery_label">Contestant discovery</string>

    <!-- Contestant Fragment Strings -->
    <string name="contestant_heading">Contestant</string>
    <string name="contestant_buzz">Buzz!</string>

    <!-- Common Strings -->
    <string name="player_list_label">Players:</string>
    <string name="find_host_heading">Find Host</string>
    <string name="searching_hosts">Searching for Hosts...</string>
    <string name="status_label">Status:</string>
    <string name="status_connected">Connected</string>
    <string name="status_not_connected">Not Connected</string>

    <!-- Menu Strings-->
    <string name="action_invite">Invite users</string>

</resources>
