<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:text="@string/host_heading"
        android:keepScreenOn="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/enable_buzzers"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_below="@id/heading"
        android:layout_marginTop="50dp"
        android:text="@string/host_enable_buzzers"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textSize="20sp"
            android:text="@string/player_list_label"/>

        <TextView
            android:id="@+id/players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/players_heading"
            android:layout_alignParentBottom="true"
            android:textSize="20sp"
            android:text="0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textSize="20sp"
            android:text="@string/discovery_label"/>
        <ToggleButton
            android:id="@+id/discovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"/>
    </LinearLayout>
</LinearLayout>
